--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Intqam-alsalatin</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Intqam-alsalatin</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="container">
-    <h1>Willkommen zu Intqam-alsalatin</h1>
-    <p>Hier kannst du Stunden berechnen!</p>
-    <!-- Dein Ergebnisbereich -->
-    <div id="result"></div>
-  </div>
+    <div class="container">
+        <header>
+            <img src="AboQasim.png" alt="Logo" class="logo">
+            <h1>Willkommen bei Intqam-alsalatin</h1>
+        </header>
+
+        <section class="calculator">
+            <h2>Stunden berechnen</h2>
+            <div class="inputs">
+                <label for="minutes-5">5 Minuten:</label>
+                <input type="number" id="minutes-5" class="input-field" value="0">
+                <label for="minutes-15">15 Minuten:</label>
+                <input type="number" id="minutes-15" class="input-field" value="0">
+                <label for="minutes-30">30 Minuten:</label>
+                <input type="number" id="minutes-30" class="input-field" value="0">
+                <label for="hour-1">1 Stunde:</label>
+                <input type="number" id="hour-1" class="input-field" value="0">
+                <label for="hour-2">2 Stunden:</label>
+                <input type="number" id="hour-2" class="input-field" value="0">
+                <label for="hour-8">8 Stunden:</label>
+                <input type="number" id="hour-8" class="input-field" value="0">
+                <label for="hour-12">12 Stunden:</label>
+                <input type="number" id="hour-12" class="input-field" value="0">
+                <label for="hour-24">24 Stunden:</label>
+                <input type="number" id="hour-24" class="input-field" value="0">
+            </div>
+            <button id="calculate" class="btn">Berechnen</button>
+            <div class="result">
+                <h3>Ergebnis:</h3>
+                <p id="total-hours">0 Stunden</p>
+            </div>
+        </section>
+
+        <footer>
+            <p>&copy; 2025 Intqam-alsalatin. Alle Rechte vorbehalten.</p>
+        </footer>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
