--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         .image-box {
             width: 100%;
             height: 200px; /* Bildhöhe */
-            background: url('/ِAboQasim.png') no-repeat center center;
+            background: url('AboQasim.png') no-repeat center center;
             background-size: cover; /* Bild skaliert, um die gesamte Fläche zu decken */
             margin-bottom: 20px;
             border-radius: 8px;
@@ -230,3 +230,4 @@ if (localStorage.getItem("theme") === "dark") {
 
 </body>
 </html>
+
